dfir_rs/tests/compile-fail/nightly/surface_singleton_undefined_nostate.stderr
error: Cannot find referenced name `unknown`; name was never assigned.
 --> tests/compile-fail/nightly/surface_singleton_undefined_nostate.rs:6:40
  |
6 |             -> filter(|value| value <= #unknown.as_reveal_ref() && value <= #my_ref.as_reveal_ref())
  |                                        ^^^^^^^^

error: Cannot reference operator `null`. Use `singleton()`, `optional()`, or `handoff()` to create a referenceable name.
 --> tests/compile-fail/nightly/surface_singleton_undefined_nostate.rs:6:77
  |
6 |             -> filter(|value| value <= #unknown.as_reveal_ref() && value <= #my_ref.as_reveal_ref())
  |                                                                             ^^^^^^^
